# rss-buddy

./: .env.example  .flake8  .gitignore  README.md  config.py  generate_pages.py  lint.py  pyproject.toml  requirements.txt  rss-buddy.py  rss-buddy.sh  rss_processor.py  run_rss_buddy.py  run_tests.py  setup.py  state_manager.py  test.sh
.github/workflows/: generate-feeds.yml  output-readme.yml  process-rss.yml  tests.yml
rss-buddy/: pyproject.toml
rss-buddy/src/rss_buddy/: config.py  models.py  protocols.py
rss-buddy/src/rss_buddy/logics/: cli.py  fetch_feeds.py  generate_digest.py  generate_feed.py  generate_outputs.py  main.py  openai_feed_item_processor.py  process_feed.py  state_manager.py
rss-buddy/src/rss_buddy/utils/: json_encoder.py
rss-buddy/src/templates/: feed.html.j2  feed.rss.j2
rss-buddy/tests/: test_fetch_feeds.py  test_generate_digest.py  test_generate_feed.py  test_generate_outputs.py  test_openai_feed_item_processor.py  test_output_generator.py  test_process_feed.py  test_state_manager.py  test_utils.py
rss-buddy/tests/fixtures/: test_template.test.j2
src/: config.py  models.py
src/rss_buddy/: __init__.py  ai_interface.py  config.py  feed_processor.py  fetch_feeds.py  generate_digest.py  generate_feed.py  generate_outputs.py  generate_pages.py  main.py  models.py  openai_feed_item_processor.py  process_feed.py  state_manager.py
src/rss_buddy/interfaces/: protocols.py
src/rss_buddy/templates/: base.html  feed.html.j2  index.html.j2
src/rss_buddy/utils/: date_parser.py
src/templates/: feed.html  feed.html.j2  feed.rss  feed.rss.j2  index.html
tests/: __init__.py  test_ai_interface.py  test_date_handling.py  test_feed_processing_to_state.py  test_feed_processor.py  test_fetch_feeds.py  test_generate_digest.py  test_generate_feed.py  test_generate_outputs.py  test_generate_pages.py  test_integration.py  test_main.py  test_openai_feed_item_processor.py  test_process_feed.py  test_run_rss_buddy.py  test_state_manager.py  test_utils.py
tests/data/: test_feed_1.json
tests/fixtures/: mock_rss_feed.xml  test_state_for_pages.json  test_template.test
tests/fixtures/test_html/: Fuji_Rumors.html
tests/fixtures/test_html/test_html/: Fuji_Rumors.html  Fuji_Rumors.xml  MacRumors__Mac_News_and_Rumors_-_All_Stories.html  MacRumors__Mac_News_and_Rumors_-_All_Stories.xml  MacStories.html  MacStories.xml  Untitled_Feed.html  Untitled_Feed.xml  feeds.json  index.html  metadata.json
tests/utils/: test_date_parser.py
