[project]
name = "rss-buddy"
version = "0.1.0"
description = ""
authors = [
    {name = "Slava Dubovitsky",email = "evil.mrfix@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.11.12"
dependencies = [
    "requests (>=2.32.3,<3.0.0)",
    "openai (>=1.70.0,<2.0.0)",
    "pytest (>=8.3.5,<9.0.0)",
    "jinja2 (>=3.1.6,<4.0.0)",
    "feedparser (>=6.0.11,<7.0.0)",
    "pydantic (>=2.11.4,<3.0.0)",
    "pydantic-settings (>=2.9.1,<3.0.0)",   
]
scripts = { rss-buddy = "rss_buddy.main:main" }

[tool.poetry]
packages = [{include = "rss_buddy", from = "src"}]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
